--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="style.css">
-
 <head>
     <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
-
-
     <h1>Welcome to Alex's super cool Website</h1>
     <p>The number 1 website for l33t Hx40rz</p>
-  <div class="image-grid">
-    <img src="fire.gif" alt="Fire">
-    <img src="smoking-skull.gif" alt="Smoking Skull">
-    <img src="skullfinger.gif" alt="Skull finger">
-    <img src="skullfinger.gif" alt="Skull finger">
-   <img src="smoking-skull.gif" alt="Smoking Skull">
-    <img src="fire.gif" alt="Fire">
-  </div>
 
+    <div class="image-grid" id="images">
+        <img src="fire.gif" alt="Fire" class="gif-sound">
+        <img src="smoking-skull.gif" alt="Smoking Skull" class="gif-sound">
+        <img src="skullfinger.gif" alt="Skullfinger" class="gif-sound">
+        <img src="skullfinger.gif" alt="Skullfinger" class="gif-sound">
+        <img src="smoking-skull.gif" alt="Smoking Skull" class="gif-sound">
+        <img src="fire.gif" alt="Fire" class="gif-sound">
+    </div>
+
+    <!-- No visible audio element needed -->
+
+    <script>
+        // Select all images with the 'gif-sound' class
+        const gifImages = document.querySelectorAll('.gif-sound');
+
+        gifImages.forEach(img => {
+            img.addEventListener('mouseenter', () => {
+                const sound = new Audio('BadToTheBone.wav'); // use .wav (not .wave)
+                sound.volume = 1.0;
+                sound.play();
+            });
+        });
+    </script>
 
 </body>
 </html>
