--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img src="gnade.gif" alt="About Page">
 
    <audio controls loop>
-  <source src="Korn.mp3" type="audio/mpeg">
+  <source src="korn.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
