--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-<!DOCTYPE html>
-<html>
 <head>
+    <meta charset="UTF-8">
     <title>My First Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
     <h1>Welcome to Alex's super cool Website</h1>
     <p>The number 1 website for l33t Hx40rz</p>
-
+    
     <div class="image-grid" id="images">
         <img src="fire.gif" alt="Fire" class="gif-sound">
         <img src="smoking-skull.gif" alt="Smoking Skull" class="gif-sound">
@@ -19,18 +18,17 @@
         <img src="smoking-skull.gif" alt="Smoking Skull" class="gif-sound">
         <img src="fire.gif" alt="Fire" class="gif-sound">
     </div>
-
-  </a>
-</div>
-
+ 
 <div class="footer-link">
   <a href="about.html">
     <img src="gnade.gif" alt="About Page">
+    </a>
 
-   <audio controls loop>
+   <audio controls loop id="bgmusic">
   <source src="Korn.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
-</audio>
+	</audio>
+</div>
 
     <script>
         // Trigger a sound effect on each hover
